fix: info section align

--- a/src/components/Home/Product/styles.module.scss
+++ b/src/components/Home/Product/styles.module.scss
@@ -38,7 +38,8 @@
   }
 
   .moreInfo {
-    margin: 50px 10% 0;
+    width: 80%;
+    margin: 50px 0 0;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -55,6 +56,7 @@
       font-size: 20px;
       color: #CBCBCB;
       margin-top: 30px;
+      text-align: left;
     }
 
     @media (max-width: 768px) {
@@ -73,14 +75,14 @@
       .title {
         justify-content: center;
       }
-    }
-  }
 
-  .moreInfo {
-    align-items: center;
-
-    p {
-      text-align: center;
-    }
+      .moreInfo {
+        align-items: center;
+    
+        p {
+          text-align: center;
+        }
+      }
+    }    
   }
 }
